2024-08-09  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.8-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.8-alpha02: Clean Subaru';git push
	git tag -a 5.2.8-alpha02 -m 'ncks --chk_map fix area_b dgn';git push --tags

	* Print correct label and location for new grid diagnostics for area_b in nco_map_chk()

	* NCO 5.2.8-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.8-alpha01: Kia';git push
	git tag -a 5.2.8-alpha01 -m 'Functionally identical to 5.2.7 and supports NC_STRING history attribute';git push --tags

	* Modify nco_hst_att_cat() to write/append an NC_STRING history attribute

2024-08-08  Charlie Zender  <zender@uci.edu>

	* nco_c++ nco_att.hh address two CEWI warnings

2024-07-24  Charlie Zender  <zender@uci.edu>

	* Rudimentary version of CAAS algorithm primitives works with CAAS arrays

2024-07-23  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.7 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.7: Kealakekua';git push
	git tag -a 5.2.7 -m 'all: qnt lossy_compresion->quantization, dpr family; ncclimo: mth_flg clm md ERROR; ncks fix flg_dst_mpt/add_fll, chk_map area_a/b dmt lcn; ncremap: fix sgs_frc typo';git push --tags

2024-07-22  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.7-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.7-alpha04: Fake Orangina';git push
	git tag -a 5.2.7-alpha04 -m 'ncclimo: mth_flg clm md ERROR; ncks chk_map area_a/b dmt lcn; ncremap: fix sgs_frc typo';git push --tags

	* nco.texi: Clarify method and rationale for specifying --sgs_frc=/path/to/file/sgs_frc

	* ncremap: Fix typo in 5.2.6 that dropped sgs_frc argument to ncks

	* ncclimo: ERROR when climo called with --mth_srt, --mth_end

2024-07-18  Charlie Zender  <zender@uci.edu>

	* ncclimo add prc_opt to debug output

2024-07-08  Charlie Zender  <zender@uci.edu>

	* chk_map: Output side of equi-areal square instead of radius of equi-areal circle
